--- a/app/src/main/res/layout/activity_acerca_de.xml
+++ b/app/src/main/res/layout/activity_acerca_de.xml
@@ -13,7 +13,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/fondobienvenida"
+            android:background="@drawable/colorido"
             android:gravity="center_horizontal|center_vertical"
             android:orientation="vertical">
 
