--- a/app/src/main/res/layout/activity_menuprincipal.xml
+++ b/app/src/main/res/layout/activity_menuprincipal.xml
@@ -92,7 +92,7 @@
                         <Button
                             android:id="@+id/button32"
                             android:layout_width="89dp"
-                            android:layout_height="70dp"
+                            android:layout_height="69dp"
                             android:background="@drawable/juegos"
                             android:onClick="Juegos" />
                     </TableRow>
@@ -119,7 +119,7 @@
 
                     <TableRow
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:gravity="center_horizontal">
 
                         <Button
@@ -132,8 +132,8 @@
 
                         <Button
                             android:id="@+id/button35"
-                            android:layout_width="97dp"
-                            android:layout_height="65dp"
+                            android:layout_width="90dp"
+                            android:layout_height="match_parent"
                             android:background="@drawable/icon20"
                             android:gravity="center"
                             android:onClick="Tips" />
