--- a/app/src/main/res/layout/activity_ajustes.xml
+++ b/app/src/main/res/layout/activity_ajustes.xml
@@ -33,11 +33,11 @@
                 android:gravity="center_horizontal|center_vertical"
                 android:orientation="vertical">
 
-                <ImageView
-                    android:id="@+id/imageView3"
-                    android:layout_width="286dp"
-                    android:layout_height="144dp"
-                    tools:srcCompat="@tools:sample/avatars" />
+                <Button
+                    android:id="@+id/button12"
+                    android:layout_width="120dp"
+                    android:layout_height="110dp"
+                    android:background="@drawable/pets" />
 
                 <TextView
                     android:id="@+id/textView35"
