--- a/app/src/main/res/layout/activity_imc_salud.xml
+++ b/app/src/main/res/layout/activity_imc_salud.xml
@@ -19,8 +19,8 @@
 
             <TextView
                 android:id="@+id/textView50"
-                android:layout_width="324dp"
-                android:layout_height="87dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="Calcula tu imc "
                 android:textSize="24sp"
@@ -28,33 +28,37 @@
 
             <TextView
                 android:id="@+id/textView53"
-                android:layout_width="263dp"
-                android:layout_height="113dp"
+                android:layout_width="358dp"
+                android:layout_height="198dp"
+                android:background="#77FFFFFF"
                 android:gravity="center"
-                android:text="Cuentanos sobre ti!"
-                android:textSize="18sp" />
+                android:text="La fórmula del IMC es el peso en kilógramos dividido por el cuadrado de la altura en metros (kg/m2). El IMC es una indicación simple de la relación entre el peso y la talla que se utiliza frecuentemente para identificar el sobrepeso y la obesidad en los adultos, tanto a nivel individual como poblacional."
+                android:textSize="18sp"
+                android:textStyle="normal|bold|italic" />
 
             <LinearLayout
-                android:layout_width="350dp"
-                android:layout_height="200dp"
+                android:layout_width="374dp"
+                android:layout_height="208dp"
                 android:background="#36FFFFFF"
+                android:gravity="center_horizontal|center_vertical"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/textView55"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center|center_horizontal|center_vertical"
                     android:text="Ingresa tus datos"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"
+                    android:textStyle="normal|bold|italic" />
 
                 <TextView
                     android:id="@+id/textView54"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
                 <TableLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="375dp"
                     android:layout_height="126dp">
 
                     <TableRow
@@ -63,27 +67,24 @@
 
                         <TextView
                             android:id="@+id/textView56"
-                            android:layout_width="175dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Estatura" />
+                            android:gravity="center_horizontal"
+                            android:text="Estatura"
+                            android:textStyle="normal|bold|italic" />
 
                         <TextView
                             android:id="@+id/textView57"
-                            android:layout_width="175dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Peso" />
+                            android:gravity="center_horizontal"
+                            android:text="Peso"
+                            android:textStyle="normal|bold|italic" />
                     </TableRow>
 
                     <TableRow
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
-
-                        <EditText
-                            android:id="@+id/idpeso"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:ems="10"
-                            android:inputType="textPersonName" />
 
                         <EditText
                             android:id="@+id/idestatura"
@@ -92,30 +93,63 @@
                             android:ems="10"
                             android:inputType="textPersonName" />
 
+                        <EditText
+                            android:id="@+id/idpeso"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:ems="10"
+                            android:inputType="textPersonName" />
+
                     </TableRow>
 
                     <TableRow
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent" >
+                        android:layout_height="match_parent">
 
                         <TextView
                             android:id="@+id/idmsje"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center_horizontal"
-                            android:text="Tu imc es" />
+                            android:text="Tu imc es"
+                            android:textSize="18sp"
+                            android:textStyle="normal|bold" />
 
                         <TextView
                             android:id="@+id/idvalor"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="TextView" />
+                            android:text=" " />
                     </TableRow>
 
                     <TableRow
                         android:layout_width="match_parent"
                         android:layout_height="match_parent" />
                 </TableLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="266dp"
+                android:layout_height="154dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textView45"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:text=" " />
+
+                <TextView
+                    android:id="@+id/textView46"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/textView51"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
 
             </LinearLayout>
 
@@ -131,11 +165,12 @@
                     android:background="?attr/actionModeCloseDrawable" />
 
                 <Button
-                    android:id="@+id/button26"
-                    android:layout_width="65dp"
-                    android:layout_height="45dp"
-                    android:layout_weight="1"
+                    android:id="@+id/button9"
+                    android:layout_width="50dp"
+                    android:layout_height="70dp"
+                    android:background="@drawable/calculator"
                     android:onClick="ver" />
+
             </LinearLayout>
 
         </LinearLayout>
