--- a/app/src/main/res/layout/activity_menuprincipal.xml
+++ b/app/src/main/res/layout/activity_menuprincipal.xml
@@ -14,37 +14,46 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="#52FFFFFF"
             android:gravity="center_horizontal|center_vertical"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView61"
-                android:layout_width="match_parent"
-                android:layout_height="56dp"
-                android:fontFamily="cursive"
-                android:gravity="center_horizontal|center_vertical"
-                android:text="Balance"
-                android:textColor="#FFFFFF"
-                android:textSize="30sp" />
-
             <LinearLayout
-                android:layout_width="225dp"
-                android:layout_height="426dp"
+                android:layout_width="307dp"
+                android:layout_height="506dp"
+                android:background="#12FFFFFF"
                 android:gravity="center_horizontal|center_vertical"
                 android:orientation="vertical">
 
-                <TableLayout
+                <TextView
+                    android:id="@+id/textView52"
                     android:layout_width="match_parent"
-                    android:layout_height="261dp">
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal" />
+
+                <TextView
+                    android:id="@+id/textView61"
+                    android:layout_width="match_parent"
+                    android:layout_height="56dp"
+                    android:fontFamily="cursive"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:text="Balance"
+                    android:textColor="#FFFFFF"
+                    android:textSize="30sp" />
+
+                <TableLayout
+                    android:layout_width="362dp"
+                    android:layout_height="466dp"
+                    android:gravity="center_horizontal|center_vertical">
 
                     <TableRow
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:gravity="center_horizontal">
 
                         <Button
                             android:id="@+id/button24"
-                            android:layout_width="84dp"
+                            android:layout_width="100dp"
                             android:layout_height="80dp"
                             android:background="@drawable/settings"
                             android:onClick="ajustes" />
@@ -78,8 +87,8 @@
                     </TableRow>
 
                     <TableRow
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:gravity="center_horizontal">
 
                         <Button
@@ -98,8 +107,8 @@
                     </TableRow>
 
                     <TableRow
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_width="wrap_content"
+                        android:layout_height="28dp"
                         android:gravity="center_horizontal">
 
                         <TextView
@@ -119,46 +128,44 @@
 
                     <TableRow
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:gravity="center_horizontal">
 
                         <Button
-                            android:id="@+id/button34"
-                            android:layout_width="50dp"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/arbbol"
-                            android:gravity="center"
-                            android:onClick="imc_salud" />
+                            android:id="@+id/button15"
+                            android:layout_width="110dp"
+                            android:layout_height="100dp"
+                            android:background="@drawable/diet" />
 
                         <Button
-                            android:id="@+id/button35"
-                            android:layout_width="90dp"
-                            android:layout_height="match_parent"
-                            android:background="@drawable/icon20"
-                            android:gravity="center"
-                            android:onClick="Tips" />
+                            android:id="@+id/button16"
+                            android:layout_width="100dp"
+                            android:layout_height="100dp"
+                            android:background="@drawable/icon20" />
                     </TableRow>
 
                     <TableRow
                         android:layout_width="match_parent"
-                        android:layout_height="43dp"
+                        android:layout_height="match_parent"
                         android:gravity="center_horizontal">
 
                         <TextView
-                            android:id="@+id/textView69"
+                            android:id="@+id/textView66"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="TextView" />
+                            android:text="Calcula tu imc" />
 
                         <TextView
-                            android:id="@+id/textView70"
+                            android:id="@+id/textView67"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="TextView" />
+                            android:text="Revisa tus estados" />
                     </TableRow>
+
                 </TableLayout>
 
             </LinearLayout>
+
         </LinearLayout>
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
