--- a/app/src/main/res/layout/activity_msje_encuesta.xml
+++ b/app/src/main/res/layout/activity_msje_encuesta.xml
@@ -27,7 +27,8 @@
                 <TextView
                     android:id="@+id/textView43"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal" />
 
                 <TextView
                     android:id="@+id/textVie6"
@@ -42,6 +43,11 @@
                 <TextView
                     android:id="@+id/textView18"
                     android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/textView49"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
                 <TextView
