--- a/app/src/main/res/layout/activity_musica.xml
+++ b/app/src/main/res/layout/activity_musica.xml
@@ -25,11 +25,11 @@
         android:id="@+id/btn_play"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginLeft="28dp"
+        android:layout_marginStart="96dp"
+        android:layout_marginLeft="96dp"
         android:layout_marginTop="464dp"
         android:background="@drawable/reproducir"
-        android:onClick="PlayPause"
+        android:onClick="play"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -37,11 +37,11 @@
         android:id="@+id/btn_stop"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginStart="92dp"
-        android:layout_marginLeft="92dp"
+        android:layout_marginStart="180dp"
+        android:layout_marginLeft="180dp"
         android:layout_marginTop="464dp"
         android:background="@drawable/detener"
-        android:onClick="Stop"
+        android:onClick="stop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -49,35 +49,11 @@
         android:id="@+id/btn_repetir"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginStart="160dp"
-        android:layout_marginLeft="160dp"
+        android:layout_marginStart="256dp"
+        android:layout_marginLeft="256dp"
         android:layout_marginTop="464dp"
-        android:background="@drawable/no_repetir"
-        android:onClick="Repetir"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/btn_anterior"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="224dp"
-        android:layout_marginLeft="224dp"
-        android:layout_marginTop="464dp"
-        android:background="@drawable/anterior"
-        android:onClick="Anterior"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/btn_siguiente"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="300dp"
-        android:layout_marginLeft="300dp"
-        android:layout_marginTop="464dp"
-        android:background="@drawable/siguiente"
-        android:onClick="Siguiente"
+        android:background="@drawable/pausa"
+        android:onClick="pause"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
