--- a/app/src/main/res/layout/activity_musica.xml
+++ b/app/src/main/res/layout/activity_musica.xml
@@ -57,5 +57,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/button18"
+        android:layout_width="80dp"
+        android:layout_height="50dp"
+        android:background="@drawable/back"
+        android:onClick="Atrass"
+        tools:layout_editor_absoluteX="39dp"
+        tools:layout_editor_absoluteY="636dp" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
