--- a/app/src/main/res/layout/activity_imc_salud.xml
+++ b/app/src/main/res/layout/activity_imc_salud.xml
@@ -39,7 +39,7 @@
             <LinearLayout
                 android:layout_width="374dp"
                 android:layout_height="208dp"
-                android:background="#36FFFFFF"
+                android:background="#43FFFFFF"
                 android:gravity="center_horizontal|center_vertical"
                 android:orientation="vertical">
 
@@ -132,6 +132,7 @@
             <LinearLayout
                 android:layout_width="266dp"
                 android:layout_height="154dp"
+                android:background="#0CFFFFFF"
                 android:orientation="vertical">
 
                 <TextView
@@ -162,7 +163,8 @@
                     android:id="@+id/button25"
                     android:layout_width="65dp"
                     android:layout_height="45dp"
-                    android:background="?attr/actionModeCloseDrawable" />
+                    android:background="?attr/actionModeCloseDrawable"
+                    android:onClick="Atrass" />
 
                 <Button
                     android:id="@+id/button9"
