--- a/app/src/main/res/layout/activity_imc_salud.xml
+++ b/app/src/main/res/layout/activity_imc_salud.xml
@@ -168,10 +168,10 @@
 
                 <Button
                     android:id="@+id/button9"
-                    android:layout_width="50dp"
-                    android:layout_height="70dp"
+                    android:layout_width="68dp"
+                    android:layout_height="79dp"
                     android:background="@drawable/calculator"
-                    android:onClick="ver" />
+                    android:onClick="siguiente" />
 
             </LinearLayout>
 
