--- a/app/src/main/res/layout/activity_parati.xml
+++ b/app/src/main/res/layout/activity_parati.xml
@@ -39,6 +39,7 @@
         android:layout_marginBottom="16dp"
         android:layout_weight="1"
         android:background="@drawable/back"
+        android:onClick="Regresar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
